--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
+  provider: ^6.1.1  # Or latest version
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
